Delete user route & improved error handling.
